// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Files get should return the wrapped file 1`] = `
Object {
  "_id": "f1",
  "createdAt": 2017-02-22T09:19:33.885Z,
  "createdBy": Object {
    "_id": "u1",
    "type": "user",
  },
  "downloadUrl": "http://download/f1",
  "filename": "f1.jpeg",
  "id": "f1",
  "mimeType": "image/jpeg",
  "name": "F1",
  "public": true,
  "rawFile": Object {
    "_id": "f1",
    "createdAt": "2017-02-22T09:19:33.885Z",
    "createdBy": Object {
      "_id": "u1",
      "type": "user",
    },
    "downloadUrl": "http://download/f1",
    "filename": "f1.jpeg",
    "mimeType": "image/jpeg",
    "name": "F1",
    "public": true,
    "size": 200,
    "status": "ready",
    "tags": Array [
      "t1",
    ],
    "updatedAt": "2018-10-22T09:19:33.885Z",
    "uploadUrl": "http://upload/f1",
  },
  "size": 200,
  "status": "ready",
  "tags": Array [
    "t1",
  ],
  "updatedAt": 2018-10-22T09:19:33.885Z,
  "uploadUrl": "http://upload/f1",
}
`;

exports[`Project Files list should return the wrapped file 1`] = `
Array [
  Object {
    "_id": "f1",
    "createdAt": 2017-02-22T09:19:33.885Z,
    "createdBy": Object {
      "_id": "u1",
      "type": "user",
    },
    "downloadUrl": "http://download/f1",
    "filename": "f1.jpeg",
    "id": "f1",
    "mimeType": "image/jpeg",
    "name": "F1",
    "public": true,
    "rawFile": Object {
      "_id": "f1",
      "createdAt": "2017-02-22T09:19:33.885Z",
      "createdBy": Object {
        "_id": "u1",
        "type": "user",
      },
      "downloadUrl": "http://download/f1",
      "filename": "f1.jpeg",
      "mimeType": "image/jpeg",
      "name": "F1",
      "public": true,
      "size": 200,
      "status": "ready",
      "tags": Array [
        "t1",
      ],
      "updatedAt": "2018-10-22T09:19:33.885Z",
      "uploadUrl": "http://upload/f1",
    },
    "size": 200,
    "status": "ready",
    "tags": Array [
      "t1",
    ],
    "updatedAt": 2018-10-22T09:19:33.885Z,
    "uploadUrl": "http://upload/f1",
  },
  Object {
    "_id": "f2",
    "createdAt": 2017-02-22T09:19:33.885Z,
    "createdBy": Object {
      "_id": "u1",
      "type": "user",
    },
    "downloadUrl": "",
    "filename": "f2.jpeg",
    "id": "f2",
    "mimeType": "image/jpeg",
    "name": "F2",
    "public": true,
    "rawFile": Object {
      "_id": "f2",
      "createdAt": "2017-02-22T09:19:33.885Z",
      "createdBy": Object {
        "_id": "u1",
        "type": "user",
      },
      "downloadUrl": "",
      "filename": "f2.jpeg",
      "mimeType": "image/jpeg",
      "name": "F2",
      "public": true,
      "size": 0,
      "status": "pending",
      "tags": Array [
        "t1",
      ],
      "updatedAt": "2018-10-22T09:19:33.885Z",
      "uploadUrl": "http://upload/f1",
    },
    "size": 0,
    "status": "pending",
    "tags": Array [
      "t1",
    ],
    "updatedAt": 2018-10-22T09:19:33.885Z,
    "uploadUrl": "http://upload/f1",
  },
]
`;

exports[`Project Files list should return the wrapped file array 1`] = `
Array [
  Object {
    "_id": "f1",
    "createdAt": 2017-02-22T09:19:33.885Z,
    "createdBy": Object {
      "_id": "u1",
      "type": "user",
    },
    "downloadUrl": "http://download/f1",
    "filename": "f1.jpeg",
    "id": "f1",
    "mimeType": "image/jpeg",
    "name": "F1",
    "public": true,
    "rawFile": Object {
      "_id": "f1",
      "createdAt": "2017-02-22T09:19:33.885Z",
      "createdBy": Object {
        "_id": "u1",
        "type": "user",
      },
      "downloadUrl": "http://download/f1",
      "filename": "f1.jpeg",
      "mimeType": "image/jpeg",
      "name": "F1",
      "public": true,
      "size": 200,
      "status": "ready",
      "tags": Array [
        "t1",
      ],
      "updatedAt": "2018-10-22T09:19:33.885Z",
      "uploadUrl": "http://upload/f1",
    },
    "size": 200,
    "status": "ready",
    "tags": Array [
      "t1",
    ],
    "updatedAt": 2018-10-22T09:19:33.885Z,
    "uploadUrl": "http://upload/f1",
  },
  Object {
    "_id": "f2",
    "createdAt": 2017-02-22T09:19:33.885Z,
    "createdBy": Object {
      "_id": "u1",
      "type": "user",
    },
    "downloadUrl": "",
    "filename": "f2.jpeg",
    "id": "f2",
    "mimeType": "image/jpeg",
    "name": "F2",
    "public": true,
    "rawFile": Object {
      "_id": "f2",
      "createdAt": "2017-02-22T09:19:33.885Z",
      "createdBy": Object {
        "_id": "u1",
        "type": "user",
      },
      "downloadUrl": "",
      "filename": "f2.jpeg",
      "mimeType": "image/jpeg",
      "name": "F2",
      "public": true,
      "size": 0,
      "status": "pending",
      "tags": Array [
        "t1",
      ],
      "updatedAt": "2018-10-22T09:19:33.885Z",
      "uploadUrl": "http://upload/f1",
    },
    "size": 0,
    "status": "pending",
    "tags": Array [
      "t1",
    ],
    "updatedAt": 2018-10-22T09:19:33.885Z,
    "uploadUrl": "http://upload/f1",
  },
]
`;
